--- a/src/app/main/components/main/main.component.scss
+++ b/src/app/main/components/main/main.component.scss
@@ -27,6 +27,13 @@
       overflow:  auto;
       -webkit-overflow-scrolling: touch;
       display: block;
+
+      .page-wrapper-inner-content {
+        @include display-flex;
+        font-family: $primary-font;
+        position: relative;
+        height: 100%;
+      }
     }
   }
 }
